# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/barrierfree/accessibility/services/test/aamstestmock.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
#1. intent(c++) get/set test without transport
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  include_dirs = aams_mock_include_dirs
  include_dirs += [
    "//foundation/barrierfree/accessibility/common/log/include",
    "//foundation/barrierfree/accessibility/dummyData",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/acfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/asacfwk/include",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common/include",
    "//foundation/barrierfree/accessibility/services/aams/include",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/include",
    "//foundation/barrierfree/accessibility/services/aams/test/mock/include",
    "//foundation/barrierfree/accessibility/services/interface/include",
    "//foundation/barrierfree/accessibility/services/interface/include/parcel",
    "//foundation/barrierfree/accessibility/util/include",
    "//base/global/resource_management/interfaces/inner_api/include",
    "//base/notification/common_event_service/interfaces/inner_api",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
    "//foundation",
    "${aafwk_path}/interfaces/kits/native/ability/native/",
    "${aafwk_path}/interfaces/kits/native/appkit/app/",
    "${aafwk_inner_api_path}/ability_manager/include",
    "${aafwk_inner_api_path}/app_manager/include/appmgr/",
    "${aafwk_services_path}/abilitymgr/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/common/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/samgr/services/samgr/native/include",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
    "//foundation/multimedia/image_standard/interfaces/kits/native/include",
    "//foundation/multimodalinput/input/util/common/include",
    "//foundation/windowmanager/dm/include",
    "//foundation/windowmanager/interfaces/innerkits",
    "//foundation/windowmanager/interfaces/innerkits/dm",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//utils/system/safwk/native/include",
    "mock",
  ]
  defines = [
    "AAMS_LOG_TAG = \"accessibility_test\"",
    "AAMS_LOG_DOMAIN = 0xD005205",
  ]
}

################################################################################
ohos_unittest("accessibility_account_data_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessibility_account_data.cpp",
    "mock/src/mock_accessibility_settings_config.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_accessible_ability_connection.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_account_data_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_inner_api_path}/ability_manager:ability_manager",
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

################################################################################
ohos_unittest("accessible_ability_manager_service_test") {
  module_out_path = module_output_path
  sources = [
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_element_operator_callback_stub.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "mock/src/mock_bundle_mgr_proxy.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessible_ability_manager_service_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_touch_guider_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_display_manager.cpp",
    "../src/accessibility_gesture_recognizer.cpp",
    "../src/accessibility_settings_config.cpp",
    "../src/accessibility_touch_guider.cpp",
    "../src/accessibility_window_connection.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/utils.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessibility_element_operator_callback_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/parcel/accessibility_element_info_parcel.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_accessibility_common_event.cpp",
    "mock/src/mock_accessibility_event_transmission.cpp",
    "mock/src/mock_accessibility_input_interceptor.cpp",
    "mock/src/mock_accessibility_window_manager.cpp",
    "mock/src/mock_accessible_ability_channel_proxy.cpp",
    "mock/src/mock_accessible_ability_client_proxy.cpp",
    "mock/src/mock_accessible_ability_connection.cpp",
    "mock/src/mock_accessible_ability_manager_service.cpp",
    "mock/src/mock_accessible_ability_manager_service_stub.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_touch_guider_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_common_event_registry_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_common_event.cpp",
    "../src/accessibility_dumper.cpp",
    "../src/accessible_ability_manager_service.cpp",
    "../src/utils.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_service_stub.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_common_event_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_input_interceptor_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessibility_display_manager.cpp",
    "../src/accessibility_input_interceptor.cpp",
    "../src/accessibility_mouse_autoclick.cpp",
    "../src/accessibility_short_key.cpp",
    "../src/accessibility_zoom_handler.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/utils.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_ability_info.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//foundation/barrierfree/accessibility/frameworks/common/src/accessibility_window_info.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_common_event.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_dumper.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_event_transmission.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_accessibility_gesture_recognizer.cpp",
    "mock/src/mock_accessibility_keyevent_filter.cpp",
    "mock/src/mock_accessibility_touchEvent_injector.cpp",
    "mock/src/mock_accessibility_touch_guider.cpp",
    "mock/src/mock_accessibility_window_manager.cpp",
    "mock/src/mock_accessible_ability_manager_service_stub.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_input_interceptor_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_inner_api_path}/ability_manager:ability_manager",
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

################################################################################
ohos_unittest("accessibility_window_manager_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessibility_window_connection.cpp",
    "../src/accessibility_window_manager.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/utils.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessibility_element_operator_callback_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessibility_element_operator_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_accessibility_common_event.cpp",
    "mock/src/mock_accessible_ability_manager_service.cpp",
    "mock/src/mock_rosen_window_info.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_window_manager_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_inner_api_path}/ability_manager:ability_manager",
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

################################################################################
ohos_unittest("accessibility_keyevent_filter_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_keyevent_filter.cpp",
    "../src/accessibility_window_connection.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/utils.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_account_data.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_common_event.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_dumper.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessibility_event_transmission.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_channel.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_connection.cpp",
    "//foundation/barrierfree/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_client_stub.cpp",
    "//foundation/barrierfree/accessibility/services/interface/src/accessible_ability_manager_service_stub.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_keyevent_filter_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessible_ability_connection_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_account_data.cpp",
    "../src/accessibility_common_event.cpp",
    "../src/accessibility_display_manager.cpp",
    "../src/accessibility_dumper.cpp",
    "../src/accessibility_event_transmission.cpp",
    "../src/accessibility_gesture_recognizer.cpp",
    "../src/accessibility_input_interceptor.cpp",
    "../src/accessibility_mouse_autoclick.cpp",
    "../src/accessibility_settings_config.cpp",
    "../src/accessibility_short_key.cpp",
    "../src/accessibility_touchEvent_injector.cpp",
    "../src/accessibility_touch_guider.cpp",
    "../src/accessibility_window_connection.cpp",
    "../src/accessibility_window_manager.cpp",
    "../src/accessibility_zoom_gesture.cpp",
    "../src/accessibility_zoom_handler.cpp",
    "../src/accessible_ability_channel.cpp",
    "../src/accessible_ability_connection.cpp",
    "../src/accessible_ability_manager_service.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/utils.cpp",
    "mock/src/aafwk/mock_ability_manager_client.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_element_operator_callback_stub.cpp",
    "mock/src/mock_accessibility_element_operator_stub.cpp",
    "mock/src/mock_accessibility_keyevent_filter.cpp",
    "mock/src/mock_accessible_ability_channel_proxy.cpp",
    "mock/src/mock_accessible_ability_client_proxy.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessible_ability_connection_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "ipc:libdbinder",
  ]
}

################################################################################
ohos_unittest("accessibility_display_manager_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_display_manager.cpp",
    "../src/utils.cpp",
    "unittest/accessibility_display_manager_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_touchevent_injector_test") {
  module_out_path = module_output_path
  sources = [
    "mock/src/mock_accessibility_common_event.cpp",
    "mock/src/mock_accessibility_event_transmission.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_touchEvent_injector_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/aams:accessibleabilityms",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":accessibility_account_data_test",
    ":accessibility_common_event_registry_test",
    ":accessibility_display_manager_test",
    ":accessibility_input_interceptor_test",
    ":accessibility_keyevent_filter_test",
    ":accessibility_touch_guider_test",
    ":accessibility_touchevent_injector_test",
    ":accessibility_window_manager_test",
    ":accessible_ability_connection_test",
    ":accessible_ability_manager_service_test",
  ]
}
